Fixed Parr Summary lable alignment on Entity Profile and Cancelled Ban Files modified - [EntityProfile,EntityProfileCancelledBans]

--- a/src/main/webapp/pages/EntityProfile/EntityProfile.css
+++ b/src/main/webapp/pages/EntityProfile/EntityProfile.css
@@ -22,7 +22,7 @@ h3 {
 }
 
 .parrSumLabel {
-    text-align: right;
+    text-align: left;
 }
 
 .form-group.app-composite-widget.row.clearfix {
