--- a/src/main/webapp/pages/EntityProfileCancelledBans/EntityProfileCancelledBans.css
+++ b/src/main/webapp/pages/EntityProfileCancelledBans/EntityProfileCancelledBans.css
@@ -21,7 +21,7 @@
     padding-left: 0.7em;
 }
 .parrSumLabel {
-    text-align: right;
+    text-align: left;
 }
 
 /*.createUserNotes{
